gitea_base/drone-builds-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone-builds
  labels:
    app.kubernetes.io/part-of: drone
