gitea_base/gitops-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s-app: gitops
    pod-security.kubernetes.io/enforce: privileged
  name: gitops
