gitea_base/drone.yaml
# Drone Server and Kubernetes runner.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drone-server
  namespace: gitops
spec:
  serviceName: drone-server
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: arm-cluster-master:5000/drone:2.21
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: drone-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: drone-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: drone-server
  namespace: gitops
spec:
  type: ClusterIP
  selector:
    app: drone-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drone-runner
  template:
    metadata:
      labels:
        app: drone-runner
    spec:
      serviceAccountName: drone-runner-sa
      containers:
      - name: runner
        image: arm-cluster-master:5000/drone-runner-kube:latest-linux-arm64
